recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: type mismatch;
 found   : Boolean
 required: Int
	spiral(steps-1,angle,length + 3 < 12, incfrement );
                                        ^